more spacing issues

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,7 +34,7 @@ h1{
 }
 
 h2 {
-	margin-top: 25px;
+	margin-top: 15px;
 	margin-bottom: 10px;
 	font-weight: 400;
 	font-size: 32px;
